--- a/style.css
+++ b/style.css
@@ -74,6 +74,7 @@ logo:hover{
 .hamburger-menu{
     position: relative;
     display: inline-block;
+    z-index: 1000;
 }
 
 .hamburger-icon{
